fix: BLOG-59 about us word wrapping fixed

--- a/static/scss/elements/_sections.scss
+++ b/static/scss/elements/_sections.scss
@@ -13,6 +13,9 @@
         background-position-y: center;
         .block__postfix {
           margin-bottom: 0px;
+          &.block__postfix--promo-home {
+            text-align: center;
+          }
         }
         @media screen and (max-width: 1020px) {
           background-image: url(/static/images/background-landscape.png);
@@ -41,9 +44,15 @@
       .block__description {
         white-space: nowrap;
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 599px) {
         .block__description {
           white-space: unset;
+        }
+        br {
+          display: none;
+        }
+        .br-mobile {
+          display: initial;
         }
       }
     }
@@ -55,6 +64,9 @@
       font-size: 13px;
       text-align: left;
       line-height: 20px;
+      &.block__postfix--promo-home {
+        text-align: center;
+      }
     }
     &--main {
       padding-bottom: 100px;
@@ -67,7 +79,6 @@
   &__social {
     border-top: 1px solid #e4e5e7;
   }
-
   &__legal {
     padding-top: 130px;
   }
@@ -126,15 +137,6 @@
       }
     }
   }
-  &__faq {
-    .col-xs-12 {
-      // .social__item--link {
-      //   left: -30px;
-      //   width: 20px;
-      //   height: 20px;
-      // }
-    }
-  }
 }
 
 @media screen and (min-width: $mobileWidth) {
@@ -178,6 +180,11 @@
         &.col-md-6 {
           flex-basis: 48%;
         }
+      }
+    }
+    &__promo--about {
+      br {
+        display: initial;
       }
     }
     &__reviews {
